made the instructions more clear

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 <div>
 
   <div style="clear: both;">
-      <h3>-----Mood-----</h3>
+      
 <b class="alignleft">Hate</b>
 <b class="alignright">Love</b>
   <div class="slidecontainer">
     <input type="range" min="-10" max="10" value="0" class="slider" id="myRange">
   </div>
+  <i>Drag the heart to set the person's feelings towards you.</i>
 </div>
 <p></p>
   <button id="moodbutton">Roll</button>
